--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".favoriteFragment"
+    tools:context=".main.favoriteFragment"
     tools:viewBindingIgnore="false">
 
     <androidx.recyclerview.widget.RecyclerView
