--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/search"
+        android:title="Поиск"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_search"
+        android:visible="false" />
     <item
         android:id="@+id/logOut"
         android:title="Выйти"
