--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,42 +6,55 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.pethub.loginFragment"
+        android:name="com.example.pethub.main.loginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.pethub.profileFragment"
+        android:name="com.example.pethub.main.profileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/mapsFragment"
-        android:name="com.example.pethub.MapsFragment"
+        android:name="com.example.pethub.main.MapsFragment"
         android:label="fragment_maps"
         tools:layout="@layout/fragment_maps" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.pethub.homeFragment"
+        android:name="com.example.pethub.main.homeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_filterFragment"
+            app:destination="@id/filterFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.pethub.favoriteFragment"
+        android:name="com.example.pethub.main.favoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
     <fragment
         android:id="@+id/addFragment"
-        android:name="com.example.pethub.addFragment"
+        android:name="com.example.pethub.main.addFragment"
         android:label="fragment_add"
         tools:layout="@layout/fragment_add" />
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.example.pethub.signUpFragment"
+        android:name="com.example.pethub.main.signUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" />
     <fragment
         android:id="@+id/descriptionFragment"
-        android:name="com.example.pethub.descriptionFragment"
+        android:name="com.example.pethub.main.descriptionFragment"
         android:label="fragment_description"
         tools:layout="@layout/fragment_description" />
+    <fragment
+        android:id="@+id/filterFragment"
+        android:name="com.example.pethub.main.filterFragment"
+        android:label="fragment_filter"
+        tools:layout="@layout/fragment_filter" >
+        <action
+            android:id="@+id/action_filterFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
