--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -15,6 +15,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/lightGrey"
         app:iconifiedByDefault="false"
+        app:queryHint="Введите текст для фильтрации"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -158,11 +159,11 @@
         android:id="@+id/resultBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:text="Показать результаты"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
