--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -45,7 +45,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="10dp"
+            android:layout_marginStart="5dp"
             android:text="Тип"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -54,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="end"
+            android:layout_marginEnd="5dp"
             android:layout_marginStart="150dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
@@ -108,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:paddingStart="10dp"
+            android:layout_marginStart="5dp"
             android:text="Вид"
             android:textSize="20dp" />
 
@@ -116,6 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="end"
+            android:layout_marginEnd="5dp"
             android:layout_marginStart="150dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
