--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,10 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
-        android:title="Поиск"
+        android:id="@+id/clear_filter"
+        android:title="Очистить фильтр"
         app:showAsAction="always"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/clear_filter"
+        android:visible="false" />
+    <item
+        android:id="@+id/filter"
+        android:title="Фильтровать"
+        app:showAsAction="always"
+        android:icon="@drawable/filter"
         android:visible="false" />
     <item
         android:id="@+id/logOut"
@@ -14,4 +20,5 @@
         android:icon="@drawable/ic_logout"
         app:showAsAction="always"
         android:visible="false" />
+
 </menu>
