Added edit and delete options for ads added by the user, improved add/delete ads to favorite list, improved users profile

--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -12,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:textColor="@color/grey"
+        android:textSize="20dp"
         android:text="Избранные объявления отсутствуют"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/rvFavorite"
