--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.addFragment">
+    tools:context=".main.editFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -20,7 +20,7 @@
 
 
         <EditText
-            android:id="@+id/titleTv"
+            android:id="@+id/editTitleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Введите заголовок" />
@@ -32,7 +32,7 @@
             android:orientation="horizontal">
 
             <Spinner
-                android:id="@+id/spinnerAddType"
+                android:id="@+id/spinnerEditType"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
@@ -62,7 +62,7 @@
             android:orientation="horizontal">
 
             <Spinner
-                android:id="@+id/spinnerAddKind"
+                android:id="@+id/spinnerEditKind"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
@@ -84,24 +84,24 @@
         </RelativeLayout>
 
         <EditText
-            android:id="@+id/tvLocation"
+            android:id="@+id/editTvLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Введите город" />
 
         <EditText
-            android:id="@+id/priceTv"
+            android:id="@+id/editPriceTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Введите цену" />
 
         <Button
-            android:id="@+id/bthAdd"
+            android:id="@+id/bthEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
-            android:text="Создать объявление"
+            android:text="Изменить объявление"
             android:textColor="@color/white"
             android:textSize="16dp" />
 
