--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -14,8 +14,10 @@
         android:layout_width="164dp"
         android:layout_height="169dp"
         android:layout_marginTop="25dp"
+        app:civ_border_width="1dp"
         android:gravity="center_horizontal|center_vertical"
-        android:src="@drawable/cat"
+        android:src="@drawable/empty_photo"
+        app:civ_border_color="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
