--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,11 +11,12 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="115dp"
+        android:layout_height="115dp"
         android:layout_marginTop="25dp"
         android:gravity="center_horizontal|center_vertical"
-        android:src="@mipmap/user1_icon_foreground"
+        android:src="@color/lightGrey"
+        app:civ_border_width="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
